# probnum

./: .coveragerc  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthecods.yml  .readthedocs.yml  .travis.yml  AUTHORS.md  AUTHORS.rst  CHANGELOG.rst  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_CODE.md  CONTRIBUTORS.md  LICENSE.txt  README.md  README.rst  STYLEGUIDE.md  apt.txt  codecov.yml  dev-requirements.txt  environment.yml  formatting-requirements.txt  linting-requirements.txt  postBuild  pyproject.toml  requirements.txt  script.py  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI-build.yml  black.yml  lint-diff.yml  linting.yml  pylint_check.py  python-publish.yml  run-notebooks.yml  tests.yml
benchmarks/: .gitignore  asv.conf.json  benchmark_utils.py  covfuncs.py  distribution.py  filtsmooth.py  ivpsolve.py  ivpsolvers.py  kernels.py  linearsolvers.py  linops.py  random_processes.py  random_variables.py  randprocs.py  requirements.txt
benchmarks/.asv/html/: index.json  info.json  regressions.xml
benchmarks/.asv/results/: benchmarks.json
benchmarks/probnum/: FETCH_HEAD  config  packed-refs
docs/: .gitignore  Makefile  conf.py  index.rst  notebook-requirements.txt  requirements.txt  sphinx-requirements.txt
docs/source/: api.rst  api_docs.rst  authors.rst  community.rst  conf.py  contents.rst  contributing.rst  development.md  development.rst  diffeq.rst  examples.rst  filtsmooth.rst  index.rst  intro.rst  introduction.rst  license.rst  linalg.rst  linear_solvers.rst  modules.rst  optim.rst  other.rst  prob.rst  probabilistic_numerics.rst  probability.rst  probnum.mplstyle  quad.rst  quickstart.rst  research.md  sitemap.rst  tutorials.rst  utils.rst
docs/source/_ext/: probnum-config-options.py
docs/source/_static/: custom.css  my-styles.css  probnum-style.css
docs/source/_templates/: docs-navbar.html  footer.html  index.html  layout.html  navbar.html
docs/source/api/: backend.rst  compat.rst  config.rst  diffeq.rst  filtsmooth.rst  functions.rst  kernels.rst  linalg.rst  pnm.rst  problems.rst  probnum.rst  quad.rst  randprocs.rst  typing.rst  utils.rst
docs/source/automod/: probnum.diffeq.AdaptiveSteps.rst  probnum.diffeq.ConstantSteps.rst  probnum.diffeq.GaussianIVPFilter.rst  probnum.diffeq.GaussianIVPSmoother.rst  probnum.diffeq.IBM.rst  probnum.diffeq.IOUP.rst  probnum.diffeq.IVP.rst  probnum.diffeq.Matern.rst  probnum.diffeq.ODE.rst  (+193 more)
img/: browserconfig.xml  site.webmanifest
probnum/: probability.py
probnum/linalg/: __init__.py  linear_operators.py  linear_solvers.py
src/probnum/: .gitignore  __init__.py  _config.py  _function.py  _probabilistic_numerical_method.py  _randomvariablelist.py  _select_backend.py  _stopping_criterion.py  conftest.py  linear_solvers.py  probability.py  skeleton.py  type.py  typing.py  utils.py
tests/: conftest.py  custom_assertions.py  requirements.txt  test_config.py  test_linear_operators.py  test_linear_solvers.py  test_probabilistic_numerical_method.py  test_probability.py  test_randomvariablelist.py  test_skeleton.py
tests/probnum/: test_config.py
tests/resources/: matrix_poisson.npz  rhs_poisson.npy
tests/test_backend/: test_core.py  test_hypergrad.py  test_hyperopt_torch.py
tests/test_diffeq/: test_odesolution.py  test_odesolver.py  test_perturbsolve_ivp.py  test_probsolve_ivp.py  test_scipy_solution.py  test_scipyodesolution.py  test_scipysolver.py  test_steprule.py  test_wrappedscipy_cases.py  test_wrappedscipyodesolution.py  test_wrappedscipysolver.py  test_wrapperscipyodesolution.py  test_wrapperscipysolver.py
tests/test_filtsmooth/: conftest.py  filtsmooth_testcases.py  test_bayesianfilter.py  test_kalman_filter_smoother.py  test_utils.py
tests/test_function/: test_arithmetic.py
tests/test_functions/: conftest.py  test_algebra.py  test_algebra_fallbacks.py  test_function.py
tests/test_kernels/: _utils.py  conftest.py  test_call.py  test_kernel.py  test_matern.py  test_matrix.py  test_rational_quadratic.py  test_utils.py
tests/test_linalg/: conftest.py  test_linear_operators.py  test_linear_solvers.py  test_problinsolve.py  test_state.py
tests/test_linops/: test_arithmetics.py  test_arithmetics_fallbacks.py  test_block.py  test_kronecker.py  test_linearoperators.py  test_linop_decompositions.py  test_linop_properties.py  test_linops.py  test_matrix.py  test_projections.py
tests/test_optim/: test_optim.py  test_optimizer.py
tests/test_prob/: test_randomvariable.py
tests/test_probability/: test_dirac.py  test_normal.py  test_randomvariable.py
tests/test_problems/: test_problems.py
tests/test_quad/: aux.py  conftest.py  test_acquisition_functions.py  test_bayesian_quadrature.py  test_belief_update.py  test_bq_info.py  test_bq_state.py  test_bq_utils.py  test_initial_designs.py  test_integration_measure.py  test_kernel_conversion.py  test_kernel_embeddings.py  test_policy.py  test_quadrature.py  test_stopping_criterion.py  util.py
tests/test_random_processes/: test_gaussian_process.py  test_random_process.py
tests/test_random_variables/: test_categorical.py  test_dirac.py  test_normal.py  test_random_variable.py
tests/test_randprocs/: conftest.py  test_gauss_markov_process.py  test_gaussian_process.py  test_markov_process.py  test_random_process.py
tests/test_randvars/: test_arithmetic.py  test_categorical.py  test_config.py  test_constant.py  test_normal.py  test_random_variable.py  test_randomvariablelist.py
tests/test_statespace/: conftest.py  test_diffusions.py  test_discrete_transition.py  test_discrete_transition_utils.py  test_generate_samples.py  test_integrator.py  test_preconditioner.py  test_sde.py
tests/test_utils/: test_argutils.py  test_arrayutils.py  test_fctutils.py  test_linalgutils.py  test_randomutils.py
tests/testing/: __init__.py  assertions.py  random.py  sampling.py  statistics.py
tests/utils/: __init__.py  random.py  statistics.py
tests/utils_for_tests/: __init__.py
(+1712 files in other folders)
