# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = probnum
description = Probabilistic Numerics in Python.
url = https://github.com/probabilistic-numerics/probnum
author = ProbNum Authors
author-email =
license = MIT
long-description = file: README.md
long-description-content-type = text/markdown
keywords = probabilistic-numerics, machine-learning, numerical-methods
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
packages = find:
include_package_data = True
setup_requires =
  setuptools_scm
package_dir =
    =src
# Dependencies of the project (semicolon/line-separated):
install_requires =
    cached_property; python_version<"3.8"
    dataclasses; python_version<"3.7"
    numpy<=1.19.1; python_version<="3.6"
    numpy; python_version>"3.6"
    scipy>=1.4
# The usage of test_requires is discouraged, see `Dependency Management` docs
# tests_require = pytest; pytest-cov
# Require a specific Python version, e.g. Python 2.7 or >= 3.4
python_requires = >=3.6

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install probnum[PDF]` like:
# PDF = ReportLab; RXP

# Autodiff backends
jax =
    jax<0.2.13; platform_system!="Windows"
    jaxlib<=0.1.62; platform_system!="Windows"

# Problem zoo dependencies
zoo =
    %(jax)s
    tqdm>=4.0
    requests>=2.0

# Full installation
full =
    GPy
    matplotlib
    %(jax)s
    %(zoo)s

# Dependencies needed to run the tests (semicolon/line-separated)
test =
    pytest>=4.6
    pytest-cov
    pytest-cases>=3.2.1
    # Optional dependencies of ProbNum
    GPy
    matplotlib
    %(jax)s
    %(zoo)s

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = probnum.module:function
# For example:
# console_scripts =
#     fibonacci = probnum.skeleton:run

[test]
# py.test options when running `python setup.py test`
# addopts = --verbose
extras = True

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx
warning-is-error = 1
