# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = probnum
description = Probabilistic Numerics in Python.
url = https://github.com/probabilistic-numerics/probnum
author = ProbNum Authors
author_email =
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
keywords = probabilistic-numerics, machine-learning, numerical-methods
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
packages = find:
include_package_data = True
setup_requires =
  setuptools_scm
package_dir =
    =src
# Dependencies of the project (semicolon/line-separated):
install_requires =
    numpy>=1.20
    scipy>=1.4
# The usage of test_requires is discouraged, see `Dependency Management` docs
# tests_require = pytest; pytest-cov
# Require a specific Python version, e.g. Python 2.7 or >= 3.6
python_requires = >=3.8

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install probnum[PDF]` like:
# PDF = ReportLab; RXP

# Autodiff backends
jax =
    jax[minimum-jaxlib]<0.3.2; platform_system!="Windows"

# Problem zoo dependencies
zoo =
    %(jax)s
    tqdm>=4.0
    requests>=2.0

# Calibration in the probabilistic linear solver
pls_calib =
    GPy
    # GPy can't be imported without matplolib.
    # This is and should not be a ProbNum dependency.
    matplotlib

# Full installation
full =
    %(jax)s
    %(zoo)s
    %(pls_calib)s

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = probnum.module:function
# For example:
# console_scripts =
#     fibonacci = probnum.skeleton:run

[test]
# py.test options when running `python setup.py test`
# addopts = --verbose
extras = True

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx
warning-is-error = 1
